// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleItemButtons /> rendering should handle deleting state 1`] = `
<button
  class="loading btn-loading btn btn-secondary disabled"
  disabled=""
  id="confirm-button-rule-item-delete-1"
  type="button"
>
  <i
    class="material-icons"
  >
    delete
  </i>
  Delete rule
</button>
`;

exports[`<RuleItemButtons /> rendering should handle disabling submit 1`] = `
<button
  class="btn btn-success disabled"
  disabled=""
  form="rule-form-1"
  id="rule-item-save-1"
  type="submit"
>
  Save rule
</button>
`;

exports[`<RuleItemButtons /> rendering should handle disabling submit 2`] = `
<button
  class="ml-3 btn btn-secondary disabled"
  disabled=""
  id="rule-item-duplicate-1"
  type="submit"
>
  Duplicate rule
</button>
`;

exports[`<RuleItemButtons /> rendering should handle resetting state 1`] = `
<button
  class="loading btn-loading btn btn-secondary disabled"
  disabled=""
  id="confirm-button-rule-item-discard-1"
  type="button"
>
  Discard changes
</button>
`;

exports[`<RuleItemButtons /> rendering should render the default buttons 1`] = `
<div
  class="buttons-container"
>
  <div>
    <button
      class="btn btn-success"
      form="rule-form-1"
      id="rule-item-save-1"
      type="submit"
    >
      Save rule
    </button>
    <button
      class="ml-3 btn btn-secondary"
      id="rule-item-duplicate-1"
      type="submit"
    >
      Duplicate rule
    </button>
    <div
      class="component d-inline-block ml-3"
      id="rule-item-discard-1"
    >
      <button
        class="btn btn-secondary"
        id="confirm-button-rule-item-discard-1"
        type="button"
      >
        Discard changes
      </button>
    </div>
  </div>
  <div>
    <div
      class="component d-inline-block ml-2 delete-button"
      id="rule-item-delete-1"
    >
      <button
        class="btn btn-secondary"
        id="confirm-button-rule-item-delete-1"
        type="button"
      >
        <i
          class="material-icons"
        >
          delete
        </i>
        Delete rule
      </button>
    </div>
  </div>
</div>
`;
